--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blockchain",
   "version": "1.0.0",
-  "description": "",
+  "description": "China Block Simulation Program with JavaScript",
   "main": "index.js",
   "scripts": {
     "test": "jest"
